--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BuiltFront Demo</title>
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="bower_components/charte-graphique/main.css">
+    <!-- bower:css -->
+    <!-- endbower -->
+
     <link rel="stylesheet" href="styles/app.css">
 </head>
 <body>
 <div class="container-fluid" ng-view></div>
-<script src="bower_components/angular/angular.js"></script>
-<script src="bower_components/angular-route/angular-route.js"></script>
+<!-- bower:js -->
+<!-- endbower -->
+
 <script src="app.js"></script>
 <script src="components/todo/todo-controller.js"></script>
 </body>
