ajout de la tache grunt pour le serveur

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BuiltFront Demo</title>
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/charte-graphique/main.css" />
     <!-- endbower -->
 
     <link rel="stylesheet" href="styles/app.css">
@@ -13,6 +15,10 @@
 <body>
 <div class="container-fluid" ng-view></div>
 <!-- bower:js -->
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script src="bower_components/angular-route/angular-route.js"></script>
 <!-- endbower -->
 
 <script src="app.js"></script>
